--- a/dockerfiles/Dockerfile_conbu-api-server
+++ b/dockerfiles/Dockerfile_conbu-api-server
@@ -23,6 +23,7 @@ RUN sed -i -e 's/localhost:8282/conbu-api-daemon:8282/g' app.rb
 
 # change settings according to conference
 RUN sed -i -e 's/phpcon2015/droidkaigi2017/g' app.rb
+RUN sed -i 's/AP-\[0-9\]{3}/AP[0-9]{1,3}/g' app.rb
 
 CMD ["bundle", "exec", "rackup", "-E", "production"]
 
