--- a/dockerfiles/Dockerfile_conbu-api-daemon
+++ b/dockerfiles/Dockerfile_conbu-api-daemon
@@ -8,16 +8,16 @@ ENV APP_HOME /app
 RUN mkdir $APP_HOME
 WORKDIR $APP_HOME
 
-RUN git clone https://github.com/conbu/conbu-api-daemon
+RUN git clone https://github.com/ANNotunzdY/conbu-api-daemon
 
 WORKDIR $APP_HOME/conbu-api-daemon
+
+RUN git checkout feature/iw2017
 
 RUN bundle install
 
 RUN mkdir /root/.pit
 COPY default.yaml /root/.pit/
-
-RUN sed -i -e s/zabbix\.conbu/zabbix3.conbu/g daemon
 
 # change settings according to conference
 RUN sed -i 's/AP-\[0-9\]{3}/AP[0-9]{1,3}/g' daemon
