--- a/dockerfiles/Dockerfile_conbu-api-server
+++ b/dockerfiles/Dockerfile_conbu-api-server
@@ -8,9 +8,11 @@ ENV APP_HOME /app
 RUN mkdir $APP_HOME
 WORKDIR $APP_HOME
 
-RUN git clone https://github.com/conbu/conbu-api-server
+RUN git clone https://github.com/ANNotunzdY/conbu-api-server
 
 WORKDIR $APP_HOME/conbu-api-server
+
+RUN git checkout feature/iw2017
 
 RUN bundle install
 
@@ -22,7 +24,7 @@ RUN sed -i -e s/10\.255\.254\.101/0.0.0.0/g config.ru
 RUN sed -i -e 's/localhost:8282/conbu-api-daemon:8282/g' app.rb
 
 # change settings according to conference
-RUN sed -i -e 's/phpcon2015/droidkaigi2017/g' app.rb
+RUN sed -i -e 's/phpcon2015/iw2017/g' app.rb
 RUN sed -i 's/AP-\[0-9\]{3}/AP[0-9]{1,3}/g' app.rb
 
 CMD ["bundle", "exec", "rackup", "-E", "production"]
